1. Use menu_eventarea template remove duplicate code 2. Fix Nil-Class error when create mission.

--- a/app/views/mission_lists/show.html.erb
+++ b/app/views/mission_lists/show.html.erb
@@ -3,11 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
-    <div class="menu-eventarea"
-         data-controller="comment missiondistributor"
-         data-action="click@window->comment#onClick click@window->missiondistributor#onClick">
-    </div>
-    
+
+    <%= render "layouts/menu_eventarea" %>
     <%= render "layouts/loading_dialog", message: "正在删除任务列表..." %>
     <%= render "layouts/mission_toolbar" %>
     <%= render 'layouts/header' %>
