Use "" quote erb template, otherwise attributables will got wrong value.

--- a/app/views/layouts/_mission_distributor_button.html.erb
+++ b/app/views/layouts/_mission_distributor_button.html.erb
@@ -1,19 +1,19 @@
 <button type="button"
-        <% if mission %>
-        class="<%= mission.mission_distributor_button_class %>"
-        data-missionid=<%= mission.hashid %>
-        data-userid=<%= mission.user_id %>
-        data-username=<%= mission.user_name %>
-        data-date=<%= mission.format_finish_time %>
-        <% else %>
+        <% if mission.nil? %>
         class="mission-distributor-button mission-distributor-empty"
         data-missionid=""
         data-userid=""
         data-username=""
         data-date=""
+        <% else %>
+        class="<%= mission.mission_distributor_button_class %>"
+        data-missionid="<%= mission.hashid %>"
+        data-userid="<%= mission.user_id %>"
+        data-username="<%= mission.user_name %>"
+        data-date="<%= mission.format_finish_time %>"
         <% end %>
-        data-controller=<%= controller %>
-        data-action=<%= action %> >
+        data-controller="missiondistributor"
+        data-action="missiondistributor#clickDistributorButton">
   <% if mission %>
     <%= mission.format_distributor_info %>
   <% else %>
