--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -58,31 +58,8 @@
          class="board-box min-board-height right-float-menu-parent">
       <%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMissionPage" %>
 
-      <div class="right-float-menu-box">
-        <div class="right-float-menu"
-             data-target="rightfloatmenu.rightMenuArea"
-             data-action="scroll@window->rightfloatmenu#onScroll">
-          <ul class="right-float-menu-scrollarea">
-            <li class="right-float-menu-item">
-              <a href="#"
-                 class="right-float-menu-normal-button"
-                 data-action="mission#clickMissionPageEditButton">
-                编辑
-              </a>
-            </li>
-            <% if team_administrator? %>
-              <li class="right-float-menu-item">
-                <a href="#"
-                   class="right-float-menu-delete-button"
-                   data-toggle="modal"
-                   data-target="#confirm-dialog">
-                  删除
-                </a>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
+      <%= render "layouts/right_float_menu", edit_action: "mission#clickMissionPageEditButton" %>
+
       <%= link_to project_mission_list_url(@project.hashid, @mission_list.hashid), class: "mission-list-link" do %>
         <%= @mission_list.name %>
       <% end %>
