--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -11,7 +11,7 @@
     <%= render 'layouts/header' %>
     <%= render "layouts/mission_toolbar",
     edit_action: "mission#clickMissionPageEditButton",
-    delete_dialog: "#confirm-dialog"
+    dialog_id: "confirm-dialog"
     %>
 
     <%= render "layouts/confirm_dialog", dialogid: "comment-confirm-dialog", message: "确定要删除这条评论吗?", controller: "comment", action: "comment#confirmDeleteComment" %>
