--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,7 +7,9 @@
     <%= render "layouts/menu_eventarea" %>
     <%= render 'layouts/header' %>
     <%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMission" %>
-    <%= render "layouts/mission_toolbar" %>
+    <%= render "layouts/mission_toolbar",
+    dialog_id: "confirm-dialog"
+    %>
 
     <%= render "layouts/mission_distributor_menu" %>
 
