--- a/app/views/mission_lists/show.html.erb
+++ b/app/views/mission_lists/show.html.erb
@@ -31,7 +31,7 @@
 
       <%= render "layouts/right_float_menu", edit_action: "mission#editMissionList" %>
 
-      <%= render "mission_lists/create_mission_list", mission_list: @mission_list %>
+      <%= render "mission_lists/create_mission_list", mission_list: @mission_list, show_finished_missions: true %>
     </div>
 
   </body>
