Clean unused stimulus targets.

--- a/app/views/mission_lists/_create_mission_list.html.erb
+++ b/app/views/mission_lists/_create_mission_list.html.erb
@@ -1,6 +1,5 @@
 <ul id=<%= mission_list.hashid %>
-    class="mission-list-title"
-    data-target="mission.missionListTitle">
+    class="mission-list-title">
   <div>
     <div class="mission-save-form">
       <div class="flex-vcenter">
