--- a/app/views/mission_lists/_mission_new_form.html.erb
+++ b/app/views/mission_lists/_mission_new_form.html.erb
@@ -1,6 +1,5 @@
 <li class="mission-new-form-item">
-  <div class="mission-new-form"
-       data-target="mission.missionNewForm">
+  <div class="mission-new-form">
     <div class="flex-vcenter">
       <label class="mission-input-line"></label>
       <input type="text"
@@ -16,7 +15,6 @@
       </button>
       <a href="#"
          class="link-button-small"
-         data-target="mission.missionCancelButton"
          data-action="mission#clickMissionCancelButton">
         取消
       </a>
@@ -26,7 +24,6 @@
 <li>
   <a href="#"
      class="mission-add-button"
-     data-target="mission.missionNewButton"
      data-action="mission#clickMissionNewButton">
     添加新任务
   </a>
