--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -65,8 +65,7 @@
       <% end %>
 
       <li class="mission-edit-form-header">
-        <div class="mission-edit-form"
-             data-target="mission.missionNewForm">
+        <div class="mission-edit-form">
           <div class="flex-vcenter">
             <label class="mission-input-line"></label>
             <input type="text"
@@ -89,7 +88,6 @@
             </button>
             <a href="#"
                class="link-button-small"
-               data-target="mission.missionCancelButton"
                data-action="mission#clickMissionPageEditCancelButton">
               取消
             </a>
@@ -144,7 +142,6 @@
             </button>
             <a href="#"
                class="link-button-small"
-               data-target="mission.missionCancelButton"
                data-action="mission#clickCommentCancelButton">
               取消
             </a>
