--- a/app/views/mission_lists/_mission_edit_form.html.erb
+++ b/app/views/mission_lists/_mission_edit_form.html.erb
@@ -1,6 +1,5 @@
 <li class="mission-edit-form-item">
-  <div class="mission-edit-form"
-       data-target="mission.missionNewForm">
+  <div class="mission-edit-form">
     <div class="flex-vcenter">
       <label class="mission-input-line"></label>
       <input type="text"
@@ -16,7 +15,6 @@
       </button>
       <a href="#"
          class="link-button-small"
-         data-target="mission.missionCancelButton"
          data-action="mission#clickMissionEditCancelButton">
         取消
       </a>
