--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,7 @@
 <%= javascript_pack_tag "application" %>
 
+<div id="input-tooltip"></div>
+
 <div class="menu-eventarea"
      data-controller="header"
      data-action="click@window->header#onClick">
