--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -128,7 +128,7 @@
 
       <div class="comment-edit-form-wrap">
         <div class="mission-comment-edit-icon">
-          <%= image_tag current_user.avatar_url %>
+          <%= image_tag current_user.avatar_url, width: 48, height: 48 %>
         </div>
         <div>
           <textarea class="mission-comment-textarea"
