--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,18 @@
 
     <div class="board-box"
          data-controller="member">
-      <%= current_user.name %>
-
+      <div class="flex-vcenter personal_page_header">
+	<%= image_tag current_user.avatar_url, width: 80, height: 80 %>
+	<div class="inline-block personal_page_info">
+          <div class="personal_page_username">
+	    <%= current_user.name %>
+	  </div>
+          <div class="personal_page_email">
+	    <%= current_user.email %>
+	  </div>
+	</div>
+      </div>
+      <div class="splitter"></div>
     </div>
 
   </body>
