--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
   </form>
   <div class="glyphicon glyphicon-bell top-header-bell"></div>
   <div class="top-header-icon inline-block">
-    <%= image_tag(current_user.avatar_url, width: 24, height: 24) %>
+    <%= image_tag(current_user.avatar_url, width: 24, height: 24, class: "avatar") %>
   </div>
   <a href="#"
      class="glyphicon glyphicon-triangle-bottom top-header-item top-header-menu-button"
