--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     <div class="board-box"
          data-controller="member">
       <div class="flex-vcenter personal_page_header">
-	<%= image_tag current_user.avatar_url, width: 80, height: 80 %>
+	<%= image_tag current_user.avatar_url, width: 80, height: 80, class: "avatar" %>
 	<div class="inline-block personal_page_info">
           <div class="personal_page_username">
 	    <%= current_user.name %>
