Finish created_mission page.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,10 @@
 	</div>
       </div>
       <div class="splitter"></div>
+
+      <%= link_to user_created_missions_path(params[:id]), class: "text-link-button" do %>
+	查看创建的任务
+      <% end %>
     </div>
 
   </body>
