--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,20 +8,35 @@
     <div class="board-box"
          data-controller="member">
       <div class="flex-vcenter personal_page_header">
-	<%= image_tag current_user.avatar_url, width: 80, height: 80, class: "avatar" %>
-	<div class="inline-block personal_page_info">
+        <%= image_tag current_user.avatar_url, width: 80, height: 80, class: "avatar" %>
+        <div class="inline-block personal_page_info">
           <div class="personal_page_username">
-	    <%= current_user.name %>
-	  </div>
+            <%= current_user.name %>
+          </div>
           <div class="personal_page_email">
-	    <%= current_user.email %>
-	  </div>
-	</div>
+            <%= current_user.email %>
+          </div>
+        </div>
       </div>
       <div class="splitter"></div>
 
+      <div class="user-missions-area">
+        <% if @mission_list %>
+          <% @mission_list.each do |mission| %>
+            <% if !mission.is_finish %>
+              <%= render "missions/create_mission", mission: mission %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+
+      <div class="buttons-middle-blank"></div>
+      <%= link_to user_finished_missions_path(params[:id]), class: "text-link-button" do %>
+        查看已完成的任务
+      <% end %>
+      <div class="buttons-middle-blank"></div>
       <%= link_to user_created_missions_path(params[:id]), class: "text-link-button" do %>
-	查看创建的任务
+        查看创建的任务
       <% end %>
     </div>
 
