Support show project button after mission item.

--- a/app/views/mission_lists/_create_mission_list.html.erb
+++ b/app/views/mission_lists/_create_mission_list.html.erb
@@ -29,14 +29,14 @@
   </div>
   <% mission_list.missions.each do |mission| %>
     <% if !mission.is_finish %>
-      <%= render "missions/create_mission", mission: mission %>
+      <%= render "missions/create_mission", mission: mission, show_project: false %>
     <% end %>
   <% end %>
   <%= render "mission_lists/mission_new_form" %>
   <% if local_assigns.has_key? :show_finished_missions %>
     <% mission_list.missions.each do |mission| %>
       <% if mission.is_finish %>
-        <%= render "missions/create_mission", mission: mission %>
+        <%= render "missions/create_mission", mission: mission, show_project: false %>
       <% end %>
     <% end %>
   <% end %>
