--- a/app/views/created_missions/index.html.erb
+++ b/app/views/created_missions/index.html.erb
@@ -10,12 +10,12 @@
       <% if @mission_list %>
         <% @mission_list.each do |mission| %>
           <% if !mission.is_finish %>
-            <%= render "missions/create_mission", mission: mission %>
+            <%= render "missions/create_mission", mission: mission, show_project: true %>
           <% end %>
         <% end %>
         <% @mission_list.each do |mission| %>
           <% if mission.is_finish %>
-            <%= render "missions/create_mission", mission: mission %>
+            <%= render "missions/create_mission", mission: mission, show_project: true %>
           <% end %>
         <% end %>
       <% end %>
