--- a/app/views/finished_missions/index.html.erb
+++ b/app/views/finished_missions/index.html.erb
@@ -10,7 +10,7 @@
       <% if @mission_list %>
         <% @mission_list.each do |mission| %>
           <% if mission.is_finish %>
-            <%= render "missions/create_mission", mission: mission %>
+            <%= render "missions/create_mission", mission: mission, show_project: false %>
           <% end %>
         <% end %>
       <% end %>
