Support distributor dialog in personal page.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
   </head>
   <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
+    <%= render "layouts/menu_eventarea" %>
+    <%= render "layouts/mission_distributor_menu" %>
 
     <div class="board-box"
          data-controller="member">
