--- a/app/views/created_missions/index.html.erb
+++ b/app/views/created_missions/index.html.erb
@@ -4,6 +4,9 @@
   </head>
   <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
+    <%= render "layouts/menu_eventarea" %>
+    <%= render "layouts/mission_distributor_menu" %>
+    
     <div class="board-box min-board-height">
       <div class="page-title"><%= current_user.name %> 创建的任务</div>
 
