--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     <%= render "layouts/mission_distributor_menu" %>
 
     <div class="board-box"
-         data-controller="member">
+         data-controller="member mission">
       <div class="flex-vcenter personal_page_header">
         <%= image_tag current_user.avatar_url, width: 80, height: 80, class: "avatar" %>
         <div class="inline-block personal_page_info">
