--- a/app/views/created_missions/index.html.erb
+++ b/app/views/created_missions/index.html.erb
@@ -7,6 +7,13 @@
     <%= render "layouts/menu_eventarea" %>
     <%= render "layouts/mission_distributor_menu" %>
 
+    <%= render "layouts/confirm_dialog", dialogid: "mission-confirm-dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMission" %>
+
+    <%= render "layouts/mission_toolbar",
+    delete_dialog: "#mission-confirm-dialog",
+    dialog_id: "mission-confirm-dialog"
+    %>
+    
     <div class="board-box min-board-height"
 	 data-controller="mission">
       <div class="page-title"><%= current_user.name %> 创建的任务</div>
