--- a/app/views/created_missions/index.html.erb
+++ b/app/views/created_missions/index.html.erb
@@ -13,7 +13,7 @@
     delete_dialog: "#mission-confirm-dialog",
     dialog_id: "mission-confirm-dialog"
     %>
-    
+
     <div class="board-box min-board-height"
 	 data-controller="mission">
       <div class="page-title"><%= current_user.name %> 创建的任务</div>
@@ -24,6 +24,7 @@
             <%= render "missions/create_mission", mission: mission, show_project: true %>
           <% end %>
         <% end %>
+	<div class="created_missions_splitter"></div>
         <% @mission_list.each do |mission| %>
           <% if mission.is_finish %>
             <%= render "missions/create_mission", mission: mission, show_project: true %>
