Finish user pages.

--- a/app/views/created_missions/index.html.erb
+++ b/app/views/created_missions/index.html.erb
@@ -15,7 +15,7 @@
     %>
 
     <div class="board-box min-board-height"
-	 data-controller="mission">
+	 data-controller="mission member">
       <div class="page-title"><%= current_user.name %> 创建的任务</div>
 
       <% if @mission_list %>
